# pyTrackMateXML

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
example/: demo_PyTrackMateXML.ipynb
src/trackmatexml/: TrackmateXML.py  __init__.py
tests/: conftest.py  test_trackmatexml.py
